; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/light/extr_apds9300.c_apds9300_write_thresh.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/light/extr_apds9300.c_apds9300_write_thresh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.iio_chan_spec = type { i32 }
%struct.apds9300_data = type { i32 }

@IIO_EV_DIR_RISING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iio_dev*, %struct.iio_chan_spec*, i32, i32, i32, i32, i32)* @apds9300_write_thresh to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apds9300_write_thresh(%struct.iio_dev* %0, %struct.iio_chan_spec* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.iio_dev*, align 8
  %9 = alloca %struct.iio_chan_spec*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.apds9300_data*, align 8
  %16 = alloca i32, align 4
  store %struct.iio_dev* %0, %struct.iio_dev** %8, align 8
  store %struct.iio_chan_spec* %1, %struct.iio_chan_spec** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load %struct.iio_dev*, %struct.iio_dev** %8, align 8
  %18 = call %struct.apds9300_data* @iio_priv(%struct.iio_dev* %17)
  store %struct.apds9300_data* %18, %struct.apds9300_data** %15, align 8
  %19 = load %struct.apds9300_data*, %struct.apds9300_data** %15, align 8
  %20 = getelementptr inbounds %struct.apds9300_data, %struct.apds9300_data* %19, i32 0, i32 0
  %21 = call i32 @mutex_lock(i32* %20)
  %22 = load i32, i32* %11, align 4
  %23 = load i32, i32* @IIO_EV_DIR_RISING, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %29

25:                                               ; preds = %7
  %26 = load %struct.apds9300_data*, %struct.apds9300_data** %15, align 8
  %27 = load i32, i32* %13, align 4
  %28 = call i32 @apds9300_set_thresh_hi(%struct.apds9300_data* %26, i32 %27)
  store i32 %28, i32* %16, align 4
  br label %33

29:                                               ; preds = %7
  %30 = load %struct.apds9300_data*, %struct.apds9300_data** %15, align 8
  %31 = load i32, i32* %13, align 4
  %32 = call i32 @apds9300_set_thresh_low(%struct.apds9300_data* %30, i32 %31)
  store i32 %32, i32* %16, align 4
  br label %33

33:                                               ; preds = %29, %25
  %34 = load %struct.apds9300_data*, %struct.apds9300_data** %15, align 8
  %35 = getelementptr inbounds %struct.apds9300_data, %struct.apds9300_data* %34, i32 0, i32 0
  %36 = call i32 @mutex_unlock(i32* %35)
  %37 = load i32, i32* %16, align 4
  ret i32 %37
}

declare dso_local %struct.apds9300_data* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @apds9300_set_thresh_hi(%struct.apds9300_data*, i32) #1

declare dso_local i32 @apds9300_set_thresh_low(%struct.apds9300_data*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
